partial solution to biblioteka task added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -769,6 +769,161 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": 60,
+      "id": "a643d5e6",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "no such table: ksiazki\n"
+          ]
+        }
+      ],
+      "source": [
+        "import sqlite3\n",
+        "\n",
+        "con = sqlite3.connect(\"biblioteka.db\")\n",
+        "cur = con.cursor()\n",
+        "try:\n",
+        "    cur.execute(\"DROP TABLE ksiazki;\")\n",
+        "except Exception as e:\n",
+        "    print(e)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 58,
+      "id": "bfaf4fcf",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import sqlite3\n",
+        "con = sqlite3.connect(\"biblioteka.db\")\n",
+        "cur = con.cursor()\n",
+        "try:\n",
+        "    cur.execute(\"CREATE TABLE Ksiazki(autor, tytul)\")\n",
+        "except Exception as e:\n",
+        "    print(e)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 61,
+      "id": "d55457aa",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Moduł biblioteka\n",
+        "import sqlite3\n",
+        "\n",
+        "\n",
+        "def stworz_baze_biblioteka():\n",
+        "    con = sqlite3.connect(\"biblioteka.db\")\n",
+        "    cur = con.cursor()\n",
+        "    try:\n",
+        "        cur.execute(\"CREATE TABLE Ksiazki(autor, tytul)\")\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        "    con.close()\n",
+        "\n",
+        "\n",
+        "def wyczysc_biblioteke():\n",
+        "    con = sqlite3.connect(\"biblioteka.db\")\n",
+        "    cur = con.cursor()\n",
+        "    try:\n",
+        "        cur.execute(\"DROP TABLE Ksiazki;\")\n",
+        "    except Exception as e:\n",
+        "        print(e)\n",
+        "    con.close()\n",
+        "\n",
+        "\n",
+        "def dodaj_ksiazke(autor, tytul):\n",
+        "    con = sqlite3.connect(\"biblioteka.db\")\n",
+        "    cur = con.cursor()\n",
+        "    cur.execute(f\"INSERT INTO Ksiazki VALUES('{autor}', '{tytul}');\")\n",
+        "    con.commit()\n",
+        "    con.close()\n",
+        "\n",
+        "\n",
+        "def szukaj_ksiazki(slowo_klucz):\n",
+        "    con = sqlite3.connect(\"biblioteka.db\")\n",
+        "    cur = con.cursor()\n",
+        "    wynik = cur.execute(f\"\"\"\n",
+        "                        SELECT autor, tytul\n",
+        "                        FROM Ksiazki\n",
+        "                        WHERE INSTR(autor, {slowo_klucz}) OR\n",
+        "                              INSTR(tytul, {slowo_klucz});\n",
+        "                        \"\"\")\n",
+        "    print(*wynik)\n",
+        "    con.close()\n",
+        "\n",
+        "\n",
+        "def usun_ksiazke(autor, tytul):\n",
+        "    con = sqlite3.connect(\"biblioteka.db\")\n",
+        "    cur = con.cursor()\n",
+        "    cur.execute(f\"\"\"\n",
+        "                DELETE FROM Ksiazki\n",
+        "                WHERE autor='{autor}' AND\n",
+        "                      tytul='{tytul}';\n",
+        "                \"\"\")\n",
+        "    con.commit()\n",
+        "    con.close()\n",
+        "\n",
+        "\n",
+        "def pokaz_ksiazki():\n",
+        "    con = sqlite3.connect(\"biblioteka.db\")\n",
+        "    cur = con.cursor()\n",
+        "    wynik = cur.execute(f\"\"\"\n",
+        "                        SELECT autor, tytul\n",
+        "                        FROM Ksiazki;\n",
+        "                        \"\"\")\n",
+        "    print(*wynik)\n",
+        "    con.close()\n",
+        "\n",
+        "\n",
+        "# if __name__ == \"__main__\":\n",
+        "#     import sys\n",
+        "#     print(\"Jest to plik modułu biblioteka.\")\n",
+        "#     print(\"Zawarty w nim kod nie powinien być uruchamiany jako skrypt, lecz importowany jako moduł.\")\n",
+        "#     input(\"Naciśnij dowolny klawisz, aby zakończyć działanie programu.\")\n",
+        "#     sys.exit()\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 64,
+      "id": "4db5435b",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "('Ciul', 'Kiepska ksiazka') ('debil', 'co ja tutaj robie?')\n"
+          ]
+        }
+      ],
+      "source": [
+        "wyczysc_biblioteke()\n",
+        "stworz_baze_biblioteka()\n",
+        "\n",
+        "pokaz_ksiazki()\n",
+        "\n",
+        "dodaj_ksiazke(\"Ciul\", \"Kiepska ksiazka\")\n",
+        "dodaj_ksiazke(\"debil\", \"co ja tutaj robie?\")\n",
+        "\n",
+        "pokaz_ksiazki()"
+      ]
+    },
+    {
       "attachments": {},
       "cell_type": "markdown",
       "id": "131b8ec2",
