solution to biblioteka task added

--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -769,136 +769,50 @@
       ]
     },
     {
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "766a45f4",
+      "metadata": {},
+      "source": [
+        "### Instalowanie dodatkowego modułu do wyświetlania ładnych tabelek"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 60,
-      "id": "a643d5e6",
+      "execution_count": 2,
+      "id": "9e8eab2f",
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "no such table: ksiazki\n"
+            "Collecting prettytable\n",
+            "  Using cached prettytable-3.8.0-py3-none-any.whl (27 kB)\n",
+            "Requirement already satisfied: wcwidth in g:\\python\\wsb_python_tasks\\.venv\\lib\\site-packages (from prettytable) (0.2.6)\n",
+            "Installing collected packages: prettytable\n",
+            "Successfully installed prettytable-3.8.0\n"
           ]
         }
       ],
       "source": [
-        "import sqlite3\n",
-        "\n",
-        "con = sqlite3.connect(\"biblioteka.db\")\n",
-        "cur = con.cursor()\n",
-        "try:\n",
-        "    cur.execute(\"DROP TABLE ksiazki;\")\n",
-        "except Exception as e:\n",
-        "    print(e)\n"
+        "# Install a pip package in the current Jupyter kernel\n",
+        "import sys\n",
+        "!{sys.executable} -m pip install prettytable"
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 58,
-      "id": "bfaf4fcf",
+      "attachments": {},
+      "cell_type": "markdown",
+      "id": "b1e5464b",
       "metadata": {},
-      "outputs": [],
       "source": [
-        "import sqlite3\n",
-        "con = sqlite3.connect(\"biblioteka.db\")\n",
-        "cur = con.cursor()\n",
-        "try:\n",
-        "    cur.execute(\"CREATE TABLE Ksiazki(autor, tytul)\")\n",
-        "except Exception as e:\n",
-        "    print(e)"
+        "### Test funkcji modułu biblioteka"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
-      "id": "d55457aa",
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# Moduł biblioteka\n",
-        "import sqlite3\n",
-        "\n",
-        "\n",
-        "def stworz_baze_biblioteka():\n",
-        "    con = sqlite3.connect(\"biblioteka.db\")\n",
-        "    cur = con.cursor()\n",
-        "    try:\n",
-        "        cur.execute(\"CREATE TABLE Ksiazki(autor, tytul)\")\n",
-        "    except Exception as e:\n",
-        "        print(e)\n",
-        "    con.close()\n",
-        "\n",
-        "\n",
-        "def wyczysc_biblioteke():\n",
-        "    con = sqlite3.connect(\"biblioteka.db\")\n",
-        "    cur = con.cursor()\n",
-        "    try:\n",
-        "        cur.execute(\"DROP TABLE Ksiazki;\")\n",
-        "    except Exception as e:\n",
-        "        print(e)\n",
-        "    con.close()\n",
-        "\n",
-        "\n",
-        "def dodaj_ksiazke(autor, tytul):\n",
-        "    con = sqlite3.connect(\"biblioteka.db\")\n",
-        "    cur = con.cursor()\n",
-        "    cur.execute(f\"INSERT INTO Ksiazki VALUES('{autor}', '{tytul}');\")\n",
-        "    con.commit()\n",
-        "    con.close()\n",
-        "\n",
-        "\n",
-        "def szukaj_ksiazki(slowo_klucz):\n",
-        "    con = sqlite3.connect(\"biblioteka.db\")\n",
-        "    cur = con.cursor()\n",
-        "    wynik = cur.execute(f\"\"\"\n",
-        "                        SELECT autor, tytul\n",
-        "                        FROM Ksiazki\n",
-        "                        WHERE INSTR(autor, {slowo_klucz}) OR\n",
-        "                              INSTR(tytul, {slowo_klucz});\n",
-        "                        \"\"\")\n",
-        "    print(*wynik)\n",
-        "    con.close()\n",
-        "\n",
-        "\n",
-        "def usun_ksiazke(autor, tytul):\n",
-        "    con = sqlite3.connect(\"biblioteka.db\")\n",
-        "    cur = con.cursor()\n",
-        "    cur.execute(f\"\"\"\n",
-        "                DELETE FROM Ksiazki\n",
-        "                WHERE autor='{autor}' AND\n",
-        "                      tytul='{tytul}';\n",
-        "                \"\"\")\n",
-        "    con.commit()\n",
-        "    con.close()\n",
-        "\n",
-        "\n",
-        "def pokaz_ksiazki():\n",
-        "    con = sqlite3.connect(\"biblioteka.db\")\n",
-        "    cur = con.cursor()\n",
-        "    wynik = cur.execute(f\"\"\"\n",
-        "                        SELECT autor, tytul\n",
-        "                        FROM Ksiazki;\n",
-        "                        \"\"\")\n",
-        "    print(*wynik)\n",
-        "    con.close()\n",
-        "\n",
-        "\n",
-        "# if __name__ == \"__main__\":\n",
-        "#     import sys\n",
-        "#     print(\"Jest to plik modułu biblioteka.\")\n",
-        "#     print(\"Zawarty w nim kod nie powinien być uruchamiany jako skrypt, lecz importowany jako moduł.\")\n",
-        "#     input(\"Naciśnij dowolny klawisz, aby zakończyć działanie programu.\")\n",
-        "#     sys.exit()\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 64,
+      "execution_count": 1,
       "id": "4db5435b",
       "metadata": {},
       "outputs": [
@@ -906,21 +820,53 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "\n",
-            "('Ciul', 'Kiepska ksiazka') ('debil', 'co ja tutaj robie?')\n"
+            "+-------+-------+\n",
+            "| Autor | Tytuł |\n",
+            "+-------+-------+\n",
+            "+-------+-------+\n",
+            "+-------------------+-------------------+\n",
+            "|       Autor       |       Tytuł       |\n",
+            "+-------------------+-------------------+\n",
+            "|  J. R. R. Tolkien |       Hobbit      |\n",
+            "|  J. R. R. Tolkien | Władca pierścieni |\n",
+            "|        Lem        |      Solaris      |\n",
+            "| Andrzej Sapkowski |    Czas pogardy   |\n",
+            "+-------------------+-------------------+\n",
+            "+------------------+-------------------+\n",
+            "|      Autor       |       Tytuł       |\n",
+            "+------------------+-------------------+\n",
+            "| J. R. R. Tolkien | Władca pierścieni |\n",
+            "+------------------+-------------------+\n"
           ]
         }
       ],
       "source": [
-        "wyczysc_biblioteke()\n",
-        "stworz_baze_biblioteka()\n",
+        "import biblioteka as b\n",
         "\n",
-        "pokaz_ksiazki()\n",
+        "# Wyczyść bibliotekę po poprzednich próbach\n",
+        "# Uwaga, usuwa jedynie zawartość biblioteki (tabelę Ksiazki), a nie cały plik biblioteka.db\n",
+        "b.wyczysc_biblioteke()\n",
         "\n",
-        "dodaj_ksiazke(\"Ciul\", \"Kiepska ksiazka\")\n",
-        "dodaj_ksiazke(\"debil\", \"co ja tutaj robie?\")\n",
+        "# Stwórz tabelę Ksiazki w biblioteka.db\n",
+        "b.stworz_baze_biblioteka()\n",
         "\n",
-        "pokaz_ksiazki()"
+        "# Wyświetl aktualny stan biblioteki\n",
+        "b.pokaz_ksiazki()\n",
+        "\n",
+        "# Dodaj książki\n",
+        "b.dodaj_ksiazke(\"J. R. R. Tolkien\", \"Hobbit\")\n",
+        "b.dodaj_ksiazke(\"J. R. R. Tolkien\", \"Władca pierścieni\")\n",
+        "b.dodaj_ksiazke(\"Lem\", \"Solaris\")\n",
+        "b.dodaj_ksiazke(\"Andrzej Sapkowski\", \"Czas pogardy\")\n",
+        "\n",
+        "# Wyświetl aktualny stan biblioteki\n",
+        "b.pokaz_ksiazki()\n",
+        "\n",
+        "# Usuń jedną z książek\n",
+        "b.usun_ksiazke(\"J. R. R. Tolkien\", \"Hobbit\")\n",
+        "\n",
+        "# Znajdź książkę zawierającą szukaną frazę w kolumnie autor lub tytuł\n",
+        "b.szukaj_ksiazki('tolkien')\n"
       ]
     },
     {
@@ -954,6 +900,7 @@
       "outputs": [],
       "source": [
         "import biblioteka\n",
+        "\n",
         "biblioteka.start()"
       ]
     }
@@ -974,7 +921,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.4"
+      "version": "3.10.0"
     },
     "nteract": {
       "version": "nteract-front-end@1.0.0"
