--- a/python-zadania-1 - zaliczenie.ipynb
+++ b/python-zadania-1 - zaliczenie.ipynb
@@ -11,10 +11,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "visible-forward",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "4\n",
+            "5\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n"
+          ]
+        }
+      ],
       "source": [
         "# Wypisz na ekran liczby z przedzialu <0,20>, które nie zawierają w sobie cyfr 3 oraz 6.\n",
         "for i in range(21):\n",
@@ -85,8 +111,8 @@
         "# Wypisz ze zdania co 3 wyraz (bez kropek).\n",
         "import re\n",
         "# words = re.split(\" |, |\\. |\\.\\\\n|\\\\n\", txt) - problem pustego ostatniego elementu listy\n",
-        "words = re.findall(r'\\w+', txt)\n",
         "\n",
+        "words = re.findall(r'\\w+', txt)\n",
         "co_trzeci = []\n",
         "\n",
         "for pos, word in enumerate(words):\n",
@@ -179,7 +205,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 1,
       "id": "liberal-graph",
       "metadata": {},
       "outputs": [
@@ -187,9 +213,9 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Orygnalna treść wiadomości.\n",
-            "Libtmzomz givść drzwlnlśxr.\n",
-            "Orygnalna treść wiadomości.\n"
+            "Oryginalna treść wiadomości.\n",
+            "Libtrmzomz givść drzwlnlśxr.\n",
+            "Oryginalna treść wiadomości.\n"
           ]
         }
       ],
@@ -203,7 +229,7 @@
         "    conversion_table = str.maketrans(\"zyxwvutsrqponmlkjihgfedcbaZYXWVUTSRQPONMLKJIHGFEDCBA\", \"abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ\")\n",
         "    return text.translate(conversion_table)\n",
         "\n",
-        "text = \"Orygnalna treść wiadomości.\"\n",
+        "text = \"Oryginalna treść wiadomości.\"\n",
         "\n",
         "enc = szyfruj(text)\n",
         "\n",
@@ -216,7 +242,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": 2,
       "id": "fitting-asset",
       "metadata": {},
       "outputs": [
@@ -224,7 +250,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "JakieŚ ZdaniE, ZaiwerajacE KropkĘ I PrzecinkI.\n"
+            "JakieŚ ZdaniE, ZawierającE KropkĘ I PrzecinkI.\n"
           ]
         }
       ],
@@ -248,15 +274,26 @@
         "                pass\n",
         "    print(*words)\n",
         "\n",
-        "capitalize_words(\"jakieś zdanie, zaiwerajace kropkę i przecinki.\")"
+        "capitalize_words(\"jakieś zdanie, zawierające kropkę i przecinki.\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "compound-butter",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'txt'"
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Napisz funkcję, która zwraca rozszerzenie pliku np. notes.txt, wypisze txt\n",
         "def ext(nazwa):\n",
@@ -267,15 +304,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "seasonal-hostel",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "6.0"
+            ]
+          },
+          "execution_count": 4,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Napisz funkcję, która obliczy pole trojkata dla podanych wartości\n",
         "def pole_trojkata(a, b, c):\n",
         "    import math\n",
-        "    # Using Heron's Formula\n",
+        "    # Stosując wzór Herona\n",
         "    s = (a + b + c) / 2\n",
         "    area = math.sqrt(s*(s-a)*(s-b)*(s-c))\n",
         "    return area\n",
@@ -285,7 +333,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 7,
       "id": "starting-organizer",
       "metadata": {},
       "outputs": [
@@ -295,7 +343,7 @@
               "True"
             ]
           },
-          "execution_count": 2,
+          "execution_count": 7,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -306,13 +354,13 @@
         "    import math\n",
         "    val = [a, b, c]\n",
         "    val.sort()\n",
-        "\n",
+        "    # Stosujemy zależność: a^2 + b^2 = c^2\n",
         "    if val[2] == math.sqrt(pow(val[0],2) + pow(val[1], 2)):\n",
         "        return True\n",
         "    else:\n",
         "        return False\n",
         "\n",
-        "to_jest_trojkat_prost(4, 3, 5)"
+        "to_jest_trojkat_prost(4, 5, 3)"
       ]
     },
     {
@@ -350,7 +398,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 10,
       "id": "civilian-scheme",
       "metadata": {},
       "outputs": [
@@ -379,7 +427,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 15,
       "id": "romantic-sister",
       "metadata": {},
       "outputs": [
@@ -387,7 +435,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "kwiecień\n",
+            "październik\n",
             "2\n"
           ]
         }
@@ -425,7 +473,7 @@
         "                \"grudzień\": 12}\n",
         "    return print(miesiace[nazwa.lower()])\n",
         "\n",
-        "nazwa_miesiaca(4)\n",
+        "nazwa_miesiaca(10)\n",
         "\n",
         "nr_miesiaca(\"luty\")"
       ]
@@ -467,10 +515,10 @@
         "    dir_path = \"./\" + katalog + \"/\"\n",
         "    list_of_files = []\n",
         "    for path in os.listdir(dir_path):\n",
-        "    # check if current path is a file\n",
+        "    # sprzwdź czy jest to plik\n",
         "        if os.path.isfile(os.path.join(dir_path, path)):\n",
         "            list_of_files.append(path)\n",
-        "    # Order alphabetically\n",
+        "    # uporządkuj alfabetycznie\n",
         "    list_of_files.sort()\n",
         "    print(*list_of_files, sep=\"\\n\")\n",
         "\n",
@@ -516,18 +564,20 @@
         }
       ],
       "source": [
+        "# Korzystając z modułu os\n",
         "def pliki_roz(katalog, ext):\n",
         "    import os\n",
         "    dir_path = \"./\" + katalog + \"/\"\n",
         "    list_of_files = []\n",
         "    for path in os.listdir(dir_path):\n",
-        "    # check if current path is a file\n",
+        "    # sprawdź czy jest to plik\n",
         "        if os.path.isfile(os.path.join(dir_path, path)) and path.split(\".\")[-1] == ext:\n",
         "            list_of_files.append(path)\n",
-        "    # Order alphabetically\n",
+        "    # uporządkuj alfabetycznie\n",
         "    list_of_files.sort()\n",
         "    print(*list_of_files, sep=\"\\n\")\n",
         "\n",
+        "# Korzystając z modułu glob\n",
         "def pliki_roz2(katalog, ext):\n",
         "    import glob\n",
         "    path = f\"./{katalog}/\"\n",
@@ -553,7 +603,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 23,
       "id": "0f3e52b7",
       "metadata": {},
       "outputs": [
@@ -561,7 +611,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "180\n"
+            "182\n"
           ]
         }
       ],
@@ -570,9 +620,9 @@
         "    from datetime import date\n",
         "    now = date.today()\n",
         "\n",
-        "    # determine current year\n",
+        "    # określ aktulany rok\n",
         "    current_year = int(now.strftime(\"%Y\"))\n",
-        "    # calculate how many days have passed\n",
+        "    # oblicz ile dni minęło\n",
         "    days_passed = now - date(current_year, 1, 1)\n",
         "    print(days_passed.days)\n",
         "\n",
@@ -592,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 17,
       "id": "9efbbc9b",
       "metadata": {},
       "outputs": [
@@ -600,7 +650,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Piwo po sklepu do kot idzie.\n"
+            "Sklepu idzie piwo po kot do.\n"
           ]
         }
       ],
@@ -628,7 +678,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 35,
+      "execution_count": 27,
       "id": "b313be25",
       "metadata": {},
       "outputs": [
@@ -636,7 +686,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Aktualny czas w Polsce: 20:28:06\n"
+            "Aktualny czas w Polsce: 20:37:05\n"
           ]
         }
       ],
@@ -648,16 +698,14 @@
         "\n",
         "    url = \"http://worldtimeapi.org/api/timezone/Europe/Warsaw.json\"\n",
         "\n",
-        "    # read data from url\n",
+        "    # odczaytaj dane z adresu\n",
         "    with  urlopen(url) as response:\n",
         "    \n",
-        "        # storing the JSON response \n",
-        "        # from url in data\n",
+        "        # przypisz dane do zmiennej\n",
         "        data_json = json.loads(response.read())\n",
-        "        \n",
-        "        # find time (HH:MM:SS) in datetime\n",
+        "        # odnajdź aktualny czas w pozyskanych danych (HH:MM:SS)\n",
         "        time = re.search(r\"(\\d{2}\\:\\d{2}\\:\\d{2})\", data_json[\"datetime\"])\n",
-        "        # print the actual time\n",
+        "        # wyświetl aktualny czas\n",
         "        print(\"Aktualny czas w Polsce:\", time.group())\n",
         "    \n",
         "czas()"
@@ -677,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 47,
+      "execution_count": 28,
       "id": "8f228742",
       "metadata": {
         "scrolled": true
@@ -787,16 +835,13 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Collecting prettytable\n",
-            "  Using cached prettytable-3.8.0-py3-none-any.whl (27 kB)\n",
-            "Requirement already satisfied: wcwidth in g:\\python\\wsb_python_tasks\\.venv\\lib\\site-packages (from prettytable) (0.2.6)\n",
-            "Installing collected packages: prettytable\n",
-            "Successfully installed prettytable-3.8.0\n"
+            "Requirement already satisfied: prettytable in g:\\python\\wsb_python_tasks\\.venv\\lib\\site-packages (3.8.0)\n",
+            "Requirement already satisfied: wcwidth in g:\\python\\wsb_python_tasks\\.venv\\lib\\site-packages (from prettytable) (0.2.6)\n"
           ]
         }
       ],
       "source": [
-        "# Install a pip package in the current Jupyter kernel\n",
+        "# Zainstaluj pakiet pip w obecnym jądrze Jupytera\n",
         "import sys\n",
         "!{sys.executable} -m pip install prettytable"
       ]
@@ -807,7 +852,7 @@
       "id": "b1e5464b",
       "metadata": {},
       "source": [
-        "### Test funkcji modułu biblioteka"
+        "### Test funkcji modułu biblioteka i tworzenie bazy testowej"
       ]
     },
     {
