solution to Wisielec project added

--- a/python-klasy-projekty.ipynb
+++ b/python-klasy-projekty.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "restricted-center",
    "metadata": {},
@@ -65,25 +66,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "crucial-uncertainty",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "słowo=----- zycie=[...]\n",
+      "słowo=l---- zycie=[...]\n",
+      "słowo=la--a zycie=[...]\n",
+      "Podałaś niewłaściwą literę!\n",
+      "słowo=la--a zycie=[x..]\n",
+      "słowo=lam-a zycie=[x..]\n",
+      "Gratulacje! Odgadłaś całe słowo: lampa!\n"
+     ]
+    }
+   ],
    "source": [
     "# tutaj zakoduj swoja klase\n",
     "class Wisielec:\n",
-    "    pass\n",
+    "    def __init__(self, word, lives) -> None:\n",
+    "        self.word = word.lower()\n",
+    "        self.lives = lives\n",
+    "        self.known_letters = []\n",
+    "        self.lost_lives = 0\n",
+    "        self.displayed_word = \"\"\n",
+    "\n",
+    "    def runda(self):\n",
+    "        self.dislayed_lives = self.create_displayed_lives()\n",
+    "        self.displayed_word = self.create_displayed_word()\n",
+    "        print(f\"słowo={self.displayed_word} zycie=[{self.displayed_lives}]\")\n",
+    "        self.c = input(\"Podaj literkę: \").lower()\n",
+    "        self.zweryfikuj_literke(self.c)\n",
+    "\n",
+    "    def koniec(self):\n",
+    "        if self.word == self.displayed_word:\n",
+    "            print(f\"Gratulacje! Odgadłaś całe słowo: {self.word}!\")\n",
+    "            return True\n",
+    "        elif self.lost_lives > self.lives - 1:\n",
+    "            print(\"Przykro mi, przegrałaś... spróbuj ponownie.\")\n",
+    "            return True\n",
+    "\n",
+    "    def zweryfikuj_literke(self, litera):\n",
+    "        try:\n",
+    "            litera = int(litera)\n",
+    "            print(\"To nie jest literka. Tracisz  życie.\")\n",
+    "            self.lost_lives += 1\n",
+    "            return\n",
+    "        except:\n",
+    "            pass\n",
+    "\n",
+    "        if litera == \"\":\n",
+    "            print(\"To nie jest literka. Tracisz życie.\")\n",
+    "            self.lost_lives += 1\n",
+    "        elif litera in self.word and litera not in self.known_letters:\n",
+    "            self.known_letters.append(litera)\n",
+    "            self.create_displayed_word()\n",
+    "        elif litera in self.known_letters:\n",
+    "            print(\"Już podałaś tę literkę!\")\n",
+    "        else:\n",
+    "            print(\"Podałaś niewłaściwą literę!\")\n",
+    "            self.lost_lives += 1\n",
+    "\n",
+    "    def create_displayed_word(self):\n",
+    "        self.displayed_word = \"\"\n",
+    "        for character in self.word:\n",
+    "            if character in self.known_letters:\n",
+    "                self.displayed_word += character\n",
+    "            else:\n",
+    "                self.displayed_word += \"-\"\n",
+    "        return self.displayed_word\n",
+    "\n",
+    "    def create_displayed_lives(self):\n",
+    "        self.displayed_lives = self.lost_lives * \"x\"\n",
+    "        self.displayed_lives += (self.lives - self.lost_lives) * \".\"\n",
+    "        return self.displayed_lives\n",
     "\n",
     "\n",
-    "\n",
-    "# test \n",
+    "# test\n",
     "gra = Wisielec(\"lampa\", 3)\n",
     "while not gra.koniec():\n",
-    "        gra.runda()\n",
-    "    "
+    "    gra.runda()\n"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "right-africa",
    "metadata": {},
@@ -235,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.0"
   }
  },
  "nbformat": 4,
